# pygge

./: README.md  pyproject.toml
src/pygge/: parser.py
